--- a/lesson_01/Ejemplos de Clase.ipynb
+++ b/lesson_01/Ejemplos de Clase.ipynb
@@ -2,21 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NBA\n",
-      "N|B|A|"
+      "ssssssssssss\n",
+      "s|s|s|s|s|s|s|s|s|s|s|s|"
      ]
     }
    ],
    "source": [
     "# Cadena iterable\n",
-    "cadena = 'NBA'\n",
+    "cadena = 'opqrstuvwxyz'\n",
     "print(cadena)\n",
     "for letra in cadena:\n",
     "    print(letra, end='|')\n",
@@ -49,11 +49,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sssssssssssssss\n",
+      "['a', 'b', 'a', 'b', 'd', 'c', 'd', 'e', 'f', 'g', 'first']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Manejo de Listas\n"
+    "# Manejo de Listas\n",
+    "\n",
+    "#Slice\n",
+    "#cadena = 'opqrstuvwxyz'\n",
+    "lista = ['a','b','d','c','d','e','f','g']\n",
+    "nueva_cadena = \"{}{}\".format(cadena[3:], cadena[:6])\n",
+    "# cadena[3:] => 'rstuvwxyz' # omite los 3 primeros\n",
+    "# cadena[:6] => 'opqrst' # solo los 6 ultimos\n",
+    "print(nueva_cadena)\n",
+    "\n",
+    "lista.append(\"first\")\n",
+    "lista.insert(0,'a')\n",
+    "lista.insert(1,'b')\n",
+    "print(lista)"
    ]
   }
  ],
