--- a/lesson_01/Ejemplos de Clase.ipynb
+++ b/lesson_01/Ejemplos de Clase.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ssssssssssss\n",
-      "s|s|s|s|s|s|s|s|s|s|s|s|"
+      "opqrstuvwxyz\n",
+      "o|p|q|r|s|t|u|v|w|x|y|z|"
      ]
     }
    ],
@@ -49,15 +49,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sssssssssssssss\n",
-      "['a', 'b', 'a', 'b', 'd', 'c', 'd', 'e', 'f', 'g', 'first']\n"
+      "rstuvwxyzopqrst\n",
+      "Append  ['a', 'b', 'd', 'c', 'd', 'e', 'f', 'g', 'first']\n",
+      "Insert  ['z', 'x', 'a', 'b', 'd', 'c', 'd', 'e', 'f', 'g', 'first']\n",
+      "Odering  ['a', 'b', 'c', 'd', 'd', 'e', 'f', 'first', 'g', 'x', 'z']\n"
      ]
     }
    ],
@@ -72,10 +74,158 @@
     "# cadena[:6] => 'opqrst' # solo los 6 ultimos\n",
     "print(nueva_cadena)\n",
     "\n",
+    "# Modificaciones\n",
     "lista.append(\"first\")\n",
-    "lista.insert(0,'a')\n",
-    "lista.insert(1,'b')\n",
-    "print(lista)"
+    "print(\"Append \",lista)\n",
+    "lista.insert(0,'z')\n",
+    "lista.insert(1,'x')\n",
+    "print(\"Insert \",lista)\n",
+    "\n",
+    "# Ordenamiento\n",
+    "lista.sort()\n",
+    "print(\"Odering \",lista)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ingrese numero separados por espacios: 9 1 8 2 7 3 6 4 5\n",
+      "[9.0, 1.0, 8.0, 2.0, 7.0, 3.0, 6.0, 4.0, 5.0]\n",
+      "[1.0, 2.0, 3.0, 5.0, 7.0, 4.0, 8.0, 6.0, 9.0]\n",
+      "[1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0, 9.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 9 1 8 2 7 3 6 4 5\n",
+    "lista_input = list(map(float,input(\"ingrese numero separados por espacios: \").split()))\n",
+    "lista_input_2 = lista_input.copy()\n",
+    "print(lista_input)\n",
+    "\n",
+    "# falla\n",
+    "for i, ei in enumerate(lista_input):\n",
+    "    for j, ej in enumerate(lista_input):\n",
+    "        if ei < ej:\n",
+    "            lista_input[i], lista_input[j] = lista_input[j], lista_input[i]\n",
+    "print(lista_input)\n",
+    "\n",
+    "for j in range(len(lista_input_2)):\n",
+    "    flag = 1\n",
+    "    for i in range(len(lista_input_2) -1 - j):\n",
+    "        if lista_input_2[i] > lista_input_2[i+1]:\n",
+    "            flag = 0\n",
+    "            lista_input_2[i], lista_input_2[i+1] = lista_input_2[i+1], lista_input_2[i]\n",
+    "    if flag:\n",
+    "        break\n",
+    "            \n",
+    "print(lista_input_2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "pop\n",
+      "Error: =>  pop from empty list\n",
+      "[]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m~/.venvs/env/lib/python3.7/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    728\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 729\u001b[0;31m                 \u001b[0mident\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreply\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdin_socket\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    730\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.venvs/env/lib/python3.7/site-packages/jupyter_client/session.py\u001b[0m in \u001b[0;36mrecv\u001b[0;34m(self, socket, mode, content, copy)\u001b[0m\n\u001b[1;32m    802\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 803\u001b[0;31m             \u001b[0mmsg_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv_multipart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    804\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mzmq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZMQError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.venvs/env/lib/python3.7/site-packages/zmq/sugar/socket.py\u001b[0m in \u001b[0;36mrecv_multipart\u001b[0;34m(self, flags, copy, track)\u001b[0m\n\u001b[1;32m    466\u001b[0m         \"\"\"\n\u001b[0;32m--> 467\u001b[0;31m         \u001b[0mparts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrack\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrack\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    468\u001b[0m         \u001b[0;31m# have first part already, only loop while more to receive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket._recv_copy\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m~/.venvs/env/lib/python3.7/site-packages/zmq/backend/cython/checkrc.pxd\u001b[0m in \u001b[0;36mzmq.backend.cython.checkrc._check_rc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-64-ed6ca859302b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlista\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mraw_args\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0margumentos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mraw_args\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mcommando\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mraw_args\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.venvs/env/lib/python3.7/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    702\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    703\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 704\u001b[0;31m             \u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    705\u001b[0m         )\n\u001b[1;32m    706\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/.venvs/env/lib/python3.7/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    732\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    733\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 734\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    735\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    736\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "lista = []\n",
+    "while True:\n",
+    "    raw_args = input().split()\n",
+    "    argumentos = raw_args[1:]\n",
+    "    commando = raw_args[0]\n",
+    "    # print(\"Ejecutando : \"+commando)\n",
+    "    if commando == 'print':\n",
+    "        print(lista)\n",
+    "        continue\n",
+    "    if commando == 'insert':\n",
+    "        try:\n",
+    "            if argumentos > 1:\n",
+    "                print(\"insert solo acepta un elemento\")\n",
+    "                continue\n",
+    "            argumentos[0] = int(argumentos[0])\n",
+    "        except ValueError as e:\n",
+    "            print(\"indice no valido\")\n",
+    "    func = getattr(lista, commando, None)\n",
+    "    if func:\n",
+    "        try:\n",
+    "            if argumentos:\n",
+    "                func(*argumentos)\n",
+    "            else:\n",
+    "                func()\n",
+    "        except Exception as e:\n",
+    "            print(\"Error: => \", e)\n",
+    "    else:\n",
+    "        print(\"Comando no reconocido\")\n",
+    "    print(lista)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aaaaaa\n"
+     ]
+    }
+   ],
+   "source": [
+    "cadena = input()\n",
+    "cadena_sub = input()\n",
+    "count = len(cadena.split(cadena_sub)) - 1\n",
+    "print(\"'{}' aparece {} en '{}'\".format(\n",
+    "    count, cadena_sub, cadena\n",
+    "))\n",
+    "\n",
+    "concurrencias = 0\n",
+    "for i, l in enumerate(cadena):\n",
+    "    if l == cadena_sub[0]:\n",
+    "        # print(cadena[i:len(cadena_sub)+i], cadena_sub)\n",
+    "        if cadena[i:len(cadena_sub)+i] == cadena_sub:\n",
+    "            concurrencias += 1\n",
+    "\n",
+    "print(concurrencias)"
    ]
   }
  ],
