Conjuntos y Diccionarios | HashTables

--- a/lesson_01/Ejemplos de Clase.ipynb
+++ b/lesson_01/Ejemplos de Clase.ipynb
@@ -199,14 +199,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aaaaaa\n"
+      "aaaaaa\n",
+      "aa\n",
+      "'3' aparece aa en 'aaaaaa'\n",
+      "5\n"
      ]
     }
    ],
@@ -226,6 +229,122 @@
     "            concurrencias += 1\n",
     "\n",
     "print(concurrencias)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4, 5, 6, 7, 8, 9)\n",
+      "(1, 2, 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Manejo de Tuplas\n",
+    "lista = [1,2,3,4,5,6,7,8,9]\n",
+    "tupla = tuple(lista)\n",
+    "print(tupla[3:])\n",
+    "print(tupla[:3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3, 12, 4}\n",
+      "{2, 3, 4, 5, 6, 40, 20}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Manejo de Conjuntos\n",
+    "conjunto1 = set([12,3,4,10,10,10])\n",
+    "conjunto0 = {1,2,3,4,5,6}\n",
+    "\n",
+    "\n",
+    "conjunto1.remove(10) # Levanta KeyError si no existe\n",
+    "conjunto0.discard(10) # No levanta eeror si no existe\n",
+    "\n",
+    "conjunto0.pop() # Elimina el primer elemento\n",
+    "\n",
+    "conjunto0.add(40)\n",
+    "conjunto0.add(20)\n",
+    "\n",
+    "print(conjunto1)\n",
+    "print(conjunto0)\n",
+    "\n",
+    "# Estructuras de datos\n",
+    "# Array - indices rapidos\n",
+    "# Listas Enlazadas - requiere recorrer\n",
+    "# Pilas - Stack (inserta y elemina lo ultimo de la estructura)\n",
+    "# Colas - Queue\n",
+    "# Arboles - Tree\n",
+    "# Hash Tables - set & dict on python - especializado en busquedas\n",
+    "# Hash maps\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "OK\n",
+      "7\n",
+      "status\n",
+      "value\n",
+      "k\n",
+      "('status', 200)\n",
+      "('value', 'OK')\n",
+      "('k', 7)\n",
+      "7\n",
+      "no-k\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'k'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-104-2534c88521c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mdic\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'k'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdic\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'k'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'no-k'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mdic\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'k'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m: 'k'"
+     ]
+    }
+   ],
+   "source": [
+    "# Manejo de Diccionarios\n",
+    "dic = dict(status=200, value=\"OK\", k=7)\n",
+    "for v in dic.values():\n",
+    "    print(v)\n",
+    "\n",
+    "for k in dic:\n",
+    "    print(k)\n",
+    "    \n",
+    "\n",
+    "for k, v in dic.items():\n",
+    "    print((k, v))\n",
+    "    \n",
+    "print(dic['k'])\n",
+    "dic.pop('k')\n",
+    "print(dic.get('k', 'no-k'))\n",
+    "dic.pop('k')"
    ]
   }
  ],
