--- a/lesson_01/Ejemplos de Clase.ipynb
+++ b/lesson_01/Ejemplos de Clase.ipynb
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -314,17 +314,6 @@
       "('k', 7)\n",
       "7\n",
       "no-k\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'k'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-104-2534c88521c1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mdic\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'k'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdic\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'k'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'no-k'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mdic\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'k'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m: 'k'"
      ]
     }
    ],
@@ -344,7 +333,35 @@
     "print(dic['k'])\n",
     "dic.pop('k')\n",
     "print(dic.get('k', 'no-k'))\n",
-    "dic.pop('k')"
+    "dic.pop('k', None) # si no existe salta error a menos que se ponga como 2do arg None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 11\n",
+      "4 7\n",
+      "5 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = set([4,6,7,9,11,5,0])\n",
+    "parejas = set()\n",
+    "for n in lista:\n",
+    "    diff = 11 - n\n",
+    "    if n in parejas:\n",
+    "        continue\n",
+    "    if lista.intersection({diff}):\n",
+    "        parejas.add(diff)\n",
+    "        print(n, diff)\n",
+    "    "
    ]
   }
  ],
