Procesamiento de textos

--- a/lesson_01/Ejemplos de Clase.ipynb
+++ b/lesson_01/Ejemplos de Clase.ipynb
@@ -363,6 +363,46 @@
     "        print(n, diff)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "habi una ves un pinche ornitorrinco con un pato paseando por el parque\n",
+      "habi 1\n",
+      "una 1\n",
+      "ves 1\n",
+      "un 2\n",
+      "pinche 1\n",
+      "ornitorrinco 1\n",
+      "con 1\n",
+      "pato 1\n",
+      "paseando 1\n",
+      "por 1\n",
+      "el 1\n",
+      "parque 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Buscando Palabras\n",
+    "cadena = input()\n",
+    "cadena_parsed = cadena.split()\n",
+    "dicc = dict()\n",
+    "for p in cadena_parsed:\n",
+    "    if dicc.get(p) is None:\n",
+    "        dicc[p] = 0\n",
+    "    dicc[p] += 1\n",
+    "\n",
+    "for k,v in dicc.items():\n",
+    "    print(k, v)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
